--- a/css/interface.css
+++ b/css/interface.css
@@ -323,12 +323,30 @@ textarea.form-control {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0, 171, 210, .6);
 }
 
+.input-group {
+  width: 100%;
+}
+
 .input-group .form-control {
   height: 46px;
 }
 
 .input-group-addon {
   border-radius: 6px;
+  width: 46px;
+  position: relative;
+  overflow: hidden;
+}
+
+[colorpicker-component] .input-group-addon i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .radio input {
