--- a/css/interface.css
+++ b/css/interface.css
@@ -30,67 +30,6 @@ body {
   margin-top: 10px;
 }
 /*BUTTONS*/
-.btn {
-  border-radius: 6px;
-  line-height: 44px;
-  padding: 0 15px;
-  border: none;
-}
-
-.btn-default {
-  color: #333;
-  background-color: #e4e9eb;
-  border-bottom: 2px solid #cfd3d5;
-}
-
-.btn-default:active,
-.btn-default:active:focus,
-.btn-default:active:hover,
-.btn-default:focus,
-.btn-default:hover {
-  color: #333;
-  background-color: #cfd3d5;
-  outline: none;
-}
-
-.btn-primary {
-  color: #FFF;
-  background-color: #00abd2;
-  border-bottom: 2px solid #0087a6;
-}
-
-.btn-primary:active,
-.btn-primary:active:focus,
-.btn-primary:active:hover,
-.btn-primary:focus,
-.btn-primary:hover {
-  color: #FFF;
-  background-color: #0087a6;
-  border-color: #0087a6;
-  outline: none;
-}
-
-.btn-danger {
-  color: #FFF;
-  background-color: #d9534f;
-  border-bottom: 2px solid #c9302c;
-}
-
-.btn-danger:active,
-.btn-danger:active:focus,
-.btn-danger:active:hover,
-.btn-danger:focus,
-.btn-danger:hover {
-  color: #FFF;
-  background-color: #c9302c;
-  border-color: #c9302c;
-  outline: none;
-}
-
-.btn-link,
-a {
-  color: #00abd2;
-}
 
 .btn-link.text-danger {
   color: #d9534f;
@@ -104,25 +43,12 @@ a {
   color: #c9302c;
 }
 
-header {
-  display: flex;
-  font-size: 1em;
-  border-bottom: 1px solid #E3E9EB;
-  margin-bottom: 3rem;
-  padding-bottom: 1.5em;
+.radio.radio-icon+.radio.radio-icon {
+  margin-top: 0;
 }
 
-header.titles {
-  font-weight: bold;
-}
-
-header p {
-  flex: 1;
-  margin: 0 1.4rem 0 0;
-}
-
-header a {
-  text-decoration: none;
+.radio.radio-icon input[type="radio"] + label {
+  padding-left: 15px;
 }
 
 .tab-content {
@@ -148,7 +74,6 @@ header a {
 }
 
 .panel-group .panel {
-  border-radius: 0;
   overflow: hidden;
 }
 
@@ -295,31 +220,9 @@ header a {
   padding: 0;
 }
 
-label {
-  font-weight: normal;
-  color: #14505e;
-}
-
-.form-control {
-  border-radius: 6px;
-  border: 1px solid #e4e9eb;
-  color: #333;
-  height: 44px;
-  line-height: 44px;
-  padding: 0 15px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
 textarea.form-control {
   line-height: 18px;
   padding: 15px;
-}
-
-.form-control:focus {
-  border-color: #00abd2;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0, 171, 210, .6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0, 171, 210, .6);
 }
 
 .input-group {
@@ -346,42 +249,6 @@ textarea.form-control {
   width: 100%;
   height: 100%;
   cursor: pointer;
-}
-
-.radio input {
-  display: none;
-}
-
-.radio {
-  float: left;
-}
-
-.radio label {
-  position: relative;
-  height: 44px;
-  line-height: 44px;
-  border: 1px solid #e4e9eb;
-  border-radius: 0;
-  background-color: #FFFFFF;
-  padding: 0 15px;
-  margin-left: 0;
-  margin-bottom: 0;
-}
-
-.radio:first-child label {
-  border-right: none;
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-.radio:last-child label {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-.radio input[type="radio"]:checked + label {
-  background-color: #00abd2;
-  color: #FFF;
 }
 
 .linked-to {
@@ -415,8 +282,4 @@ textarea.form-control {
 
 .thumb-holder .image-remove {
   margin-left: 10px;
-}
-
-h2 small {
-  color: #14505e;
 }
