--- a/css/interface.css
+++ b/css/interface.css
@@ -14,6 +14,11 @@ body {
   border: 0;
   width: 100%;
   background-color: transparent;
+  padding: 15px;
+}
+
+.add-link .fl-widget-provider {
+  padding: 0;
 }
 
 #action {
