--- a/css/build.css
+++ b/css/build.css
@@ -10,10 +10,8 @@
 .list.list-thumb-l ul {
 	padding: 0;
 	margin: 0;
-}
-
-.list.list-thumb-l ul li {
 	font-size: 16px;
+  	line-height: 1.5;
 }
 
 .list.list-thumb-l ul > li.linked {
