--- a/css/interface.css
+++ b/css/interface.css
@@ -268,7 +268,8 @@ textarea.form-control {
   float: left;
 }
 
-.thumb-holder {
+.thumb-holder,
+.icon-holder {
   height: 44px;
   display: flex;
   align-items: center;
@@ -278,6 +279,10 @@ textarea.form-control {
   float: left;
   margin-left: 10px;
   width: 54px;
+}
+
+.icon-wrapper {
+  float: left;
 }
 
 .thumb-image img {
