--- a/css/build.css
+++ b/css/build.css
@@ -80,14 +80,10 @@
 	justify-content: center;
 	font-size: 50px;
 }
-.list.list-thumb-l ul > li .list-icon {
-	display: none;
-}
 
-.list.list-thumb-l ul > li.linked .list-icon {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.list.list-thumb-l ul > li.linked:after {
+	content: "\f105";
+	font: normal normal normal 14px/1 FontAwesome;
 	position: absolute;
 	width: 44px;
 	height: 44px;
