--- a/css/build.css
+++ b/css/build.css
@@ -42,11 +42,13 @@
 }
 
 .list.list-thumb-l ul > li {
-	list-style: none;
+	align-items: center;
 	border-bottom: 1px solid rgba(51,51,51,0.2);
+	display: flex;
+	list-style: none;
+	min-height: 71px;
 	padding: 10px 10px 10px 86px;
 	position: relative;
-	min-height: 71px;
 }
 
 .list.list-thumb-l ul > li .list-swipe-wrapper {
